syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "pair.proto";
import "unpair.proto";

/*
 * A single message. Multiple can be sent at the same time in a
 * DeRecMessageBatch. This single message is a wrapper around any
 * type of individual messages.
 */
message DeRecMessage {
  /*
   * DeRec protocol version number
   */
  int64 protocolVersion = 1;

  /*
   * SHA-384 hash of sender public key (used to identify the sender and key)
   */
  bytes sender = 2;

  /*
   * SHA-384 hash of receiver's public key
   * (used to prevent signature-replacement attacks)
   */
  bytes receiver = 3;


  /*
   * secret ID (64-bit random number chosen by sharer at initial pairing)
   */
  int64 secretId = 4;

  /*
   * UTC timestamp for when the sender created this message
   */
  google.protobuf.Timestamp timestamp = 5;

  /*
   * message body is one of several possible DeRec messages
   */
  repeated MessageType message = 6;

  message MessageType {
    oneof message_type {
      PairHelperRequestMessage pairHelperRequestMessage = 1;
      PairHelperResponseMessage pairHelperResponseMessage = 2;
      UnpairHelperRequestMessage unpairHelperRequestMessage = 3;
      UnpairHelperResponseMessage unpairHelperResponseMessage = 4;
      StoreShareRequestMessage storeShareRequestMessage = 5;
      StoreShareResponseMessage storeShareResponseMessage = 6;
      /*
      VerifyShareRequestMessage verifyShareRequestMessage = 7;
      VerifyShareResponseMessage verifyShareResponseMessage = 8;
      GetSecretIdsVersionsRequestMessage getSecretIdsVersionsRequestMessage = 9;
      GetSecretIdsVersionsResponseMessage getSecretIdsVersionsResponseMessage = 10;
      GetShareRequestMessage getShareRequestMessage = 11;
      GetShareResponseMessage getShareResponseMessage = 12;
      */
    }
  }
}
